# minver_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: build_utils.rs  config.rs  core.rs  git.rs  lib.rs  main.rs  minver_build_util.rs  minver_cli.rs  minver_core.rs  semver.rs
tests/: integration_test.rs
tests/repoBuilder/: mod.rs
tests/repo_test_helper/: mod.rs
