[package]
name = "minver_rs"
version = "0.1.1"
authors = ["Dominic Trottier <domtrottier@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dktrotti/minver_rs"
description = "A Rust implementation of minver"
keywords = ["minver", "git", "version"]
categories = ["command-line-utilities", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
anyhow = "1.0"
regex = "1.5"
radix_trie = "0.2"
tempfile = "3"
