[package]
name = "minver_rs"
version = "0.0.0"
authors = ["Dominic Trottier <domtrottier@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dktrotti/minver_rs"
description = "A Rust implementation of minver"
keywords = ["minver", "git", "version"]
categories = ["command-line-utilities", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minver"
path = "src/minver_cli.rs"

[[bin]]
name = "minver_build_util"
path = "src/minver_build_util.rs"

[dependencies]
git2 = "0.13"
anyhow = "1.0"
regex = "1.5"
radix_trie = "0.2"
toml_edit = "0.2.1"
log = "0.4"
simple_logger = "1.13.0"

[dev-dependencies]
tempfile = "3"
